--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Praktikum 3</string>
     <string name="prodi">Teknologi Informasi</string>
     <string name="univ">Universitas Muhammadiyah Yogyakarta</string>
+    <string name="nama">Gibran Rafi Pratama</string>
+    <string name="alamat">Bali, Denpasar</string>
+    <string name="copy">copyright, 2025</string>
 </resources>
